Add more content

--- a/index.html
+++ b/index.html
@@ -53,16 +53,22 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<span class="image"><img src="assets/images/education/NU.png" alt="Wuhan University" width="200" height="200"></span>
-						<h3>Undergraduate<br><strong>Wuhan<br>University</strong></h3>
+						<a href="education/index.html#wuhan" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/education/Wuhan_University_Logo.png" alt="Wuhan University" width="200" height="200"></span>
+							<h3>Undergraduate<br><strong>Wuhan<br>University</strong></h3>
+						</a>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University" width="200" height="200"></span>
-						<h3>Summer School<br><strong>Shanghai Jiaotong University</strong></h3>
+						<a href="education/index.html#sjtu" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University" width="200" height="200"></span>
+							<h3>Summer School<br><strong>Shanghai Jiaotong University</strong></h3>
+						</a>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
-						<h3>Graduate<br><strong>Northeastern University</strong></h3>
+						<a href="education/index.html#northeastern" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
+							<h3>Graduate<br><strong>Northeastern University</strong></h3>
+						</a>
 					</section>
 				</div>	
 			</div>
@@ -73,25 +79,31 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<div class="logo-container">
-							<img src="assets/images/work/New_Oriental.png" alt="New Oriental">
-						</div>
-						<h3><strong>New Oriental</strong></h3>
-						<p>English Teacher</p>
+						<a href="work/index.html#neworiental" style="text-decoration: none; color: inherit; display: block;">
+							<div class="logo-container">
+								<img src="assets/images/work/New_Oriental.png" alt="New Oriental">
+							</div>
+							<h3><strong>New Oriental</strong></h3>
+							<p>English Teacher</p>
+						</a>
 					</section>
 					<section class="box">
-						<div class="logo-container">
-							<img src="assets/images/work/xcerra.png" alt="Xcerra">
-						</div>
-						<h3><strong>Xcerra</strong></h3>
-						<p>Software Engineer</p>
+						<a href="work/index.html#xcerra" style="text-decoration: none; color: inherit; display: block;">
+							<div class="logo-container">
+								<img src="assets/images/work/xcerra.png" alt="Xcerra">
+							</div>
+							<h3><strong>Xcerra</strong></h3>
+							<p>Software Engineer</p>
+						</a>
 					</section>
 					<section class="box">
-						<div class="logo-container">
-							<img src="assets/images/work/31epF-8N9LL.png" alt="Amazon">
-						</div>
-						<h3><strong>Amazon</strong></h3>
-						<p>Software Development Engineer</p>
+						<a href="work/index.html#amazon" style="text-decoration: none; color: inherit; display: block;">
+							<div class="logo-container">
+								<img src="assets/images/work/31epF-8N9LL.png" alt="Amazon">
+							</div>
+							<h3><strong>Amazon</strong></h3>
+							<p>Software Development Engineer</p>
+						</a>
 					</section>
 				</div>
 			</div>
