--- a/index-zh.html
+++ b/index-zh.html
@@ -53,16 +53,22 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<span class="image"><img src="assets/images/education/NU.png" alt="武汉大学" width="200" height="200"></span>
-						<h3>本科<br><strong>武汉大学</strong></h3>
+						<a href="education/index-zh.html#wuhan" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/education/Wuhan_University_Logo.png" alt="武汉大学" width="200" height="200"></span>
+							<h3>本科<br><strong>武汉大学</strong></h3>
+						</a>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="上海交通大学" width="200" height="200"></span>
-						<h3>暑期学校<br><strong>上海交通大学</strong></h3>
+						<a href="education/index-zh.html#sjtu" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="上海交通大学" width="200" height="200"></span>
+							<h3>暑期学校<br><strong>上海交通大学</strong></h3>
+						</a>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/images/education/NU.png" alt="东北大学" width="200" height="200"></span>
-						<h3>研究生<br><strong>东北大学</strong></h3>
+						<a href="education/index-zh.html#northeastern" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/education/NU.png" alt="东北大学" width="200" height="200"></span>
+							<h3>研究生<br><strong>东北大学</strong></h3>
+						</a>
 					</section>
 				</div>	
 			</div>
@@ -73,25 +79,31 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<div class="logo-container">
-							<img src="assets/images/work/New_Oriental.png" alt="新东方">
-						</div>
-						<h3><strong>新东方</strong></h3>
-						<p>英语教师</p>
+						<a href="work/index-zh.html#neworiental" style="text-decoration: none; color: inherit; display: block;">
+							<div class="logo-container">
+								<img src="assets/images/work/New_Oriental.png" alt="新东方">
+							</div>
+							<h3><strong>新东方</strong></h3>
+							<p>英语教师</p>
+						</a>
 					</section>
 					<section class="box">
-						<div class="logo-container">
-							<img src="assets/images/work/xcerra.png" alt="Xcerra">
-						</div>
-						<h3><strong>Xcerra</strong></h3>
-						<p>软件工程师</p>
+						<a href="work/index-zh.html#xcerra" style="text-decoration: none; color: inherit; display: block;">
+							<div class="logo-container">
+								<img src="assets/images/work/xcerra.png" alt="Xcerra">
+							</div>
+							<h3><strong>Xcerra</strong></h3>
+							<p>软件工程师</p>
+						</a>
 					</section>
 					<section class="box">
-						<div class="logo-container">
-							<img src="assets/images/work/31epF-8N9LL.png" alt="亚马逊">
-						</div>
-						<h3><strong>亚马逊</strong></h3>
-						<p>软件开发工程师</p>
+						<a href="work/index-zh.html#amazon" style="text-decoration: none; color: inherit; display: block;">
+							<div class="logo-container">
+								<img src="assets/images/work/31epF-8N9LL.png" alt="亚马逊">
+							</div>
+							<h3><strong>亚马逊</strong></h3>
+							<p>软件开发工程师</p>
+						</a>
 					</section>
 				</div>
 			</div>
