Fix the education logo size

--- a/education/index.html
+++ b/education/index.html
@@ -41,8 +41,12 @@
 
 		<article id="northeastern">
 			<div class="container">
-				<span class="image"><img src="../assets/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
-				<h2>Northeastern University</h2>
+				<div class="school-header">
+					<div class="logo-container">
+						<img src="../assets/images/education/NU.png" alt="Northeastern University">
+					</div>
+					<h2>Northeastern University</h2>
+				</div>
 				<h3>Graduate</h3>
 				<p>Master's degree in Computer Science</p>
 				<p>Advanced coursework in distributed systems, cloud computing, and software architecture.</p>
@@ -51,8 +55,12 @@
 
 		<article id="wuhan">
 			<div class="container">
-				<span class="image"><img src="../assets/images/education/Wuhan_University_Logo.png" alt="Wuhan University" width="200" height="200"></span>
-				<h2>Wuhan University</h2>
+				<div class="school-header">
+					<div class="logo-container">
+						<img src="../assets/images/education/Wuhan_University_Logo.png" alt="Wuhan University">
+					</div>
+					<h2>Wuhan University</h2>
+				</div>
 				<h3>Undergraduate</h3>
 				<p>Bachelor's degree in Computer Science</p>
 				<p>Studied fundamental computer science concepts, algorithms, and software development.</p>
@@ -61,8 +69,12 @@
 
 		<article id="sjtu">
 			<div class="container">
-				<span class="image"><img src="../assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University" width="200" height="200"></span>
-				<h2>Shanghai Jiaotong University</h2>
+				<div class="school-header">
+					<div class="logo-container">
+						<img src="../assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University">
+					</div>
+					<h2>Shanghai Jiaotong University</h2>
+				</div>
 				<h3>Summer School</h3>
 				<p>Advanced studies in software engineering</p>
 				<p>Participated in intensive summer program focusing on advanced software engineering practices.</p>
