--- a/education/index-zh.html
+++ b/education/index-zh.html
@@ -41,8 +41,12 @@
 
 		<article id="northeastern">
 			<div class="container">
-				<span class="image"><img src="../assets/images/education/NU.png" alt="东北大学" width="200" height="200"></span>
-				<h2>东北大学</h2>
+				<div class="school-header">
+					<div class="logo-container">
+						<img src="../assets/images/education/NU.png" alt="东北大学">
+					</div>
+					<h2>东北大学</h2>
+				</div>
 				<h3>研究生</h3>
 				<p>计算机科学硕士学位</p>
 				<p>分布式系统、云计算和软件架构的高级课程。</p>
@@ -51,8 +55,12 @@
 
 		<article id="wuhan">
 			<div class="container">
-				<span class="image"><img src="../assets/images/education/Wuhan_University_Logo.png" alt="武汉大学" width="200" height="200"></span>
-				<h2>武汉大学</h2>
+				<div class="school-header">
+					<div class="logo-container">
+						<img src="../assets/images/education/Wuhan_University_Logo.png" alt="武汉大学">
+					</div>
+					<h2>武汉大学</h2>
+				</div>
 				<h3>本科</h3>
 				<p>计算机科学学士学位</p>
 				<p>学习计算机科学基础概念、算法和软件开发。</p>
@@ -61,8 +69,12 @@
 
 		<article id="sjtu">
 			<div class="container">
-				<span class="image"><img src="../assets/images/education/Sjtu-logo-standard-red.png" alt="上海交通大学" width="200" height="200"></span>
-				<h2>上海交通大学</h2>
+				<div class="school-header">
+					<div class="logo-container">
+						<img src="../assets/images/education/Sjtu-logo-standard-red.png" alt="上海交通大学">
+					</div>
+					<h2>上海交通大学</h2>
+				</div>
 				<h3>暑期学校</h3>
 				<p>软件工程高级研究</p>
 				<p>参加专注于高级软件工程实践的密集暑期项目。</p>
