Add more content

--- a/education/index-zh.html
+++ b/education/index-zh.html
@@ -41,43 +41,91 @@
 
 		<article id="northeastern">
 			<div class="container">
-				<div class="school-header">
-					<div class="logo-container">
-						<img src="../assets/images/education/NU.png" alt="东北大学">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/education/NU.png" alt="东北大学">
+							</div>
+							<h2>东北大学</h2>
+						</div>
+						<div class="card-right">
+							<h3>计算机系统工程硕士</h3>
+							<ul>
+								<li>算法和数据库系统高级课程</li>
+								<li>云计算和软件架构</li>
+								<li>大数据工程系统设计研究</li>
+							</ul>
+							<div class="achievements">
+								<h4>荣誉奖项</h4>
+								<ul>
+									<li>哥伦比亚大学中美创业大赛第一名</li>
+								</ul>
+							</div>
+						</div>
 					</div>
-					<h2>东北大学</h2>
+					<div class="card-timeline">2015 - 2017</div>
 				</div>
-				<h3>研究生</h3>
-				<p>计算机科学硕士学位</p>
-				<p>分布式系统、云计算和软件架构的高级课程。</p>
 			</div>
 		</article>
 
 		<article id="wuhan">
 			<div class="container">
-				<div class="school-header">
-					<div class="logo-container">
-						<img src="../assets/images/education/Wuhan_University_Logo.png" alt="武汉大学">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/education/Wuhan_University_Logo.png" alt="武汉大学">
+							</div>
+							<h2>武汉大学</h2>
+						</div>
+						<div class="card-right">
+							<h3>能源动力系统及自动化专业学士</h3>
+							<ul>
+								<li>计算机科学基础概念</li>
+								<li>算法和数据结构</li>
+								<li>软件开发实践</li>
+							</ul>
+							<div class="achievements">
+								<h4>荣誉奖项</h4>
+								<ul>
+									<li>优秀学生奖学金</li>
+									<li>先进创新个人</li>
+									<li>全国大学生节能减排大赛三等奖</li>
+								</ul>
+							</div>
+						</div>
 					</div>
-					<h2>武汉大学</h2>
+					<div class="card-timeline">2010 - 2014</div>
 				</div>
-				<h3>本科</h3>
-				<p>计算机科学学士学位</p>
-				<p>学习计算机科学基础概念、算法和软件开发。</p>
 			</div>
 		</article>
 
 		<article id="sjtu">
 			<div class="container">
-				<div class="school-header">
-					<div class="logo-container">
-						<img src="../assets/images/education/Sjtu-logo-standard-red.png" alt="上海交通大学">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/education/Sjtu-logo-standard-red.png" alt="上海交通大学">
+							</div>
+							<h2>上海交通大学</h2>
+						</div>
+						<div class="card-right">
+							<h3>暑期学校 - 机械工程</h3>
+							<ul>
+								<li>创新工程项目</li>
+							</ul>
+							<div class="achievements">
+								<h4>荣誉奖项</h4>
+								<ul>
+									<li>优秀证书</li>
+								</ul>
+							</div>
+						</div>
 					</div>
-					<h2>上海交通大学</h2>
+					<div class="card-timeline">2013年夏季</div>
 				</div>
-				<h3>暑期学校</h3>
-				<p>软件工程高级研究</p>
-				<p>参加专注于高级软件工程实践的密集暑期项目。</p>
 			</div>
 		</article>
 
