--- a/education/index.html
+++ b/education/index.html
@@ -41,43 +41,93 @@
 
 		<article id="northeastern">
 			<div class="container">
-				<div class="school-header">
-					<div class="logo-container">
-						<img src="../assets/images/education/NU.png" alt="Northeastern University">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/education/NU.png" alt="Northeastern University">
+							</div>
+							<h2>Northeastern University</h2>
+						</div>
+						<div class="card-right">
+							<h3>Master of Science in Computer System Engineering</h3>
+							<ul>
+								<li>Advanced coursework in algorithms and database</li>
+								<li>Cloud computing and software architecture</li>
+								<li>Research in engineering big data system design</li>
+							</ul>
+							<div class="achievements">
+								<h4>Achievements</h4>
+								<ul>
+									<li>First place in US China Startup Competition in Columbia University</li>
+								</ul>
+							</div>
+						</div>
 					</div>
-					<h2>Northeastern University</h2>
+					<div class="card-timeline">2018 - 2020</div>
 				</div>
-				<h3>Graduate</h3>
-				<p>Master's degree in Computer Science</p>
-				<p>Advanced coursework in distributed systems, cloud computing, and software architecture.</p>
 			</div>
 		</article>
 
 		<article id="wuhan">
 			<div class="container">
-				<div class="school-header">
-					<div class="logo-container">
-						<img src="../assets/images/education/Wuhan_University_Logo.png" alt="Wuhan University">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/education/Wuhan_University_Logo.png" alt="Wuhan University">
+							</div>
+							<h2>Wuhan University</h2>
+						</div>
+						<div class="card-right">
+							<h3>Bachelor of Science in Dynamics System and Its Automation</h3>
+							<ul>
+								<li>Fundamental computer information and network management</li>
+								<li>Algorithms and data structures</li>
+								<li>Software development practices</li>
+							</ul>
+							<div class="achievements">
+								<h4>Achievements</h4>
+								<ul>
+									<li>Excellent Student Scholarship</li>
+									<li>Advanced Individual Prize in the College Student Technology Innovation Activities</li>
+									<li>Third prize in the Sixth National College Students Competition of Social Practice and Science and Technology on Energy Saving and Emission Reduction </li>
+								</ul>
+							</div>
+						</div>
 					</div>
-					<h2>Wuhan University</h2>
+					<div class="card-timeline">2014 - 2018</div>
 				</div>
-				<h3>Undergraduate</h3>
-				<p>Bachelor's degree in Computer Science</p>
-				<p>Studied fundamental computer science concepts, algorithms, and software development.</p>
 			</div>
 		</article>
 
 		<article id="sjtu">
 			<div class="container">
-				<div class="school-header">
-					<div class="logo-container">
-						<img src="../assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University">
+							</div>
+							<h2>Shanghai Jiaotong University</h2>
+						</div>
+						<div class="card-right">
+							<h3>Summer School - Software Engineering</h3>
+							<ul>
+								<li>Intensive software engineering program</li>
+								<li>Advanced development practices</li>
+								<li>Collaborative project work</li>
+							</ul>
+							<div class="achievements">
+								<h4>Achievements</h4>
+								<ul>
+									<li>Certificate of Excellence</li>
+								</ul>
+							</div>
+						</div>
 					</div>
-					<h2>Shanghai Jiaotong University</h2>
+					<div class="card-timeline">Summer 2016</div>
 				</div>
-				<h3>Summer School</h3>
-				<p>Advanced studies in software engineering</p>
-				<p>Participated in intensive summer program focusing on advanced software engineering practices.</p>
 			</div>
 		</article>
 
