--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<a href="https://500px.com.cn/mrchen0724" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
 							<img src="assets/images/500px.png" alt="VCG" class="contact-icon">
-							<h3><strong>Visual China Group</strong></h3>
+							<h3><strong>Visual China</strong></h3>
 						</section>
 					</a>
 				</div>
