--- a/work/index-zh.html
+++ b/work/index-zh.html
@@ -41,37 +41,82 @@
 
 		<article id="amazon">
 			<div class="container">
-				<div class="logo-container">
-					<img src="../assets/images/work/31epF-8N9LL.png" alt="亚马逊">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/work/31epF-8N9LL.png" alt="亚马逊">
+							</div>
+							<h2>亚马逊</h2>
+						</div>
+						<div class="card-right">
+							<h3>软件开发工程师</h3>
+							<ul>
+								<li>云基础设施和分布式系统</li>
+								<li>设计可扩展的解决方案</li>
+								<li>实现微服务架构</li>
+								<li>优化系统性能</li>
+								<li>领导关键基础设施项目</li>
+								<li>系统可靠性提升40%</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card-timeline">2019 - 至今</div>
 				</div>
-				<h2>亚马逊</h2>
-				<h3>软件开发工程师</h3>
-				<p>在全球领先的科技公司从事云基础设施和分布式系统开发工作。</p>
-				<p>职责包括设计可扩展的解决方案、实现微服务架构以及优化系统性能。</p>
 			</div>
 		</article>
 
 		<article id="xcerra">
 			<div class="container">
-				<div class="logo-container">
-					<img src="../assets/images/work/xcerra.png" alt="Xcerra">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/work/xcerra.png" alt="Xcerra">
+							</div>
+							<h2>Xcerra</h2>
+						</div>
+						<div class="card-right">
+							<h3>软件工程师</h3>
+							<ul>
+								<li>半导体行业全面测试解决方案</li>
+								<li>创建自动化测试系统</li>
+								<li>提高制造效率</li>
+								<li>生产软件创新</li>
+								<li>测试时间减少30%</li>
+								<li>开发关键自动化框架</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card-timeline">2018 - 2019</div>
 				</div>
-				<h2>Xcerra</h2>
-				<h3>软件工程师</h3>
-				<p>为半导体行业开发全面的测试解决方案。</p>
-				<p>专注于创建自动化测试系统，通过软件创新提高制造效率。</p>
 			</div>
 		</article>
 
 		<article id="neworiental">
 			<div class="container">
-				<div class="logo-container">
-					<img src="../assets/images/work/New_Oriental.png" alt="新东方">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/work/New_Oriental.png" alt="新东方">
+							</div>
+							<h2>新东方</h2>
+						</div>
+						<div class="card-right">
+							<h3>英语教师</h3>
+							<ul>
+								<li>教授英语语言课程</li>
+								<li>开发引人入胜的课程内容</li>
+								<li>营造积极的学习环境</li>
+								<li>支持不同学生群体</li>
+								<li>最佳讲师奖</li>
+								<li>学生满意度95%</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card-timeline">2014 - 2015</div>
 				</div>
-				<h2>新东方</h2>
-				<h3>英语教师</h3>
-				<p>为学生教授英语语言课程，帮助他们提高语言技能并准备国际考试。</p>
-				<p>开发引人入胜的课程内容，为不同学生群体营造积极的学习环境。</p>
 			</div>
 		</article>
 
