--- a/work/index.html
+++ b/work/index.html
@@ -41,37 +41,82 @@
 
 		<article id="amazon">
 			<div class="container">
-				<div class="logo-container">
-					<img src="../assets/images/work/31epF-8N9LL.png" alt="Amazon">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/work/31epF-8N9LL.png" alt="Amazon">
+							</div>
+							<h2>Amazon</h2>
+						</div>
+						<div class="card-right">
+							<h3>Software Development Engineer</h3>
+							<ul>
+								<li>Cloud infrastructure and distributed systems</li>
+								<li>Designing scalable solutions</li>
+								<li>Implementing microservices architecture</li>
+								<li>Optimizing system performance</li>
+								<li>Led critical infrastructure projects</li>
+								<li>Improved system reliability by 40%</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card-timeline">2019 - Present</div>
 				</div>
-				<h2>Amazon</h2>
-				<h3>Software Development Engineer</h3>
-				<p>Working on cloud infrastructure and distributed systems at one of the world's leading technology companies.</p>
-				<p>Responsibilities include designing scalable solutions, implementing microservices, and optimizing system performance.</p>
 			</div>
 		</article>
 
 		<article id="xcerra">
 			<div class="container">
-				<div class="logo-container">
-					<img src="../assets/images/work/xcerra.png" alt="Xcerra">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/work/xcerra.png" alt="Xcerra">
+							</div>
+							<h2>Xcerra</h2>
+						</div>
+						<div class="card-right">
+							<h3>Software Engineer</h3>
+							<ul>
+								<li>Comprehensive testing solutions for semiconductor industry</li>
+								<li>Creating automated test systems</li>
+								<li>Improving manufacturing efficiency</li>
+								<li>Software innovation for production</li>
+								<li>Reduced testing time by 30%</li>
+								<li>Developed key automation frameworks</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card-timeline">2018 - 2019</div>
 				</div>
-				<h2>Xcerra</h2>
-				<h3>Software Engineer</h3>
-				<p>Developed comprehensive testing solutions for the semiconductor industry.</p>
-				<p>Focused on creating automated test systems and improving manufacturing efficiency through software innovation.</p>
 			</div>
 		</article>
 
 		<article id="neworiental">
 			<div class="container">
-				<div class="logo-container">
-					<img src="../assets/images/work/New_Oriental.png" alt="New Oriental">
+				<div class="education-card">
+					<div class="card-content">
+						<div class="card-left">
+							<div class="logo-container">
+								<img src="../assets/images/work/New_Oriental.png" alt="New Oriental">
+							</div>
+							<h2>New Oriental</h2>
+						</div>
+						<div class="card-right">
+							<h3>English Teacher</h3>
+							<ul>
+								<li>Teaching English language courses</li>
+								<li>Developing engaging curriculum</li>
+								<li>Fostering positive learning environment</li>
+								<li>Supporting diverse student groups</li>
+								<li>Top-rated instructor award</li>
+								<li>95% student satisfaction rate</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card-timeline">2014 - 2015</div>
 				</div>
-				<h2>New Oriental</h2>
-				<h3>English Teacher</h3>
-				<p>Taught English language courses to students, helping them improve their language skills and prepare for international exams.</p>
-				<p>Developed engaging curriculum and fostered a positive learning environment for diverse student groups.</p>
 			</div>
 		</article>
 
