Add more contact

--- a/index.html
+++ b/index.html
@@ -155,8 +155,14 @@
 					</a>
 					<a href="https://500px.com.cn/mrchen0724" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
-							<img src="assets/images/500px.png" alt="VCG" class="contact-icon">
+							<img src="assets/images/Visual_China_Group_logo.png" alt="VCG" class="contact-icon">
 							<h3><strong>Visual China</strong></h3>
+						</section>
+					</a>
+					<a href="https://www.skypixel.com/users/djiuser-tc1jf6up7wdi" target="_blank" rel="noopener noreferrer" class="contact-link">
+						<section class="contact-box">
+							<img src="assets/images/logo-share.png" alt="SkyPixel" class="contact-icon">
+							<h3><strong>SkyPixel</strong></h3>
 						</section>
 					</a>
 				</div>
