Add one more photo

--- a/activity/photography.html
+++ b/activity/photography.html
@@ -102,6 +102,17 @@
 								</div>
 							</div>
 						</div>
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC06097-1.jpg" data-title="Seattle Rainbow" data-info="Seattle • 2025">
+							<img src="../assets/images/activity/photography/DSC06097-1.jpg" alt="Landscape">
+							<div class="gallery-overlay">
+								<div>
+									<h3>Seattle Sunshower</h3>
+								</div>
+								<div class="gallery-stats">
+									<p>Seattle • 2025</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
