--- a/activity/photography-zh.html
+++ b/activity/photography-zh.html
@@ -102,6 +102,17 @@
 								</div>
 							</div>
 						</div>
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC06097-1.jpg" data-title="西雅图太阳雨" data-info="西雅图 • 2025">
+							<img src="../assets/images/activity/photography/DSC06097-1.jpg" alt="风景">
+							<div class="gallery-overlay">
+								<div>
+									<h3>西雅图太阳雨</h3>
+								</div>
+								<div class="gallery-stats">
+									<p>西雅图 • 2025</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
