Add more details

--- a/education/index.html
+++ b/education/index.html
@@ -112,10 +112,8 @@
 							<h2>Shanghai Jiaotong University</h2>
 						</div>
 						<div class="card-right">
-							<h3>Summer School - Software Engineering</h3>
+							<h3>Summer School - Mechanical Engineering</h3>
 							<ul>
-								<li>Intensive software engineering program</li>
-								<li>Advanced development practices</li>
 								<li>Collaborative project work</li>
 							</ul>
 							<div class="achievements">
