--- a/work/index-zh.html
+++ b/work/index-zh.html
@@ -79,12 +79,9 @@
 						<div class="card-right">
 							<h3>软件工程师</h3>
 							<ul>
-								<li>半导体行业全面测试解决方案</li>
-								<li>创建自动化测试系统</li>
-								<li>提高制造效率</li>
-								<li>生产软件创新</li>
-								<li>测试时间减少30%</li>
-								<li>开发关键自动化框架</li>
+								<li>负责半导体测试系统的软件开发与优化，通过精简应用层架构并删除冗余代码显著提升开发效率。</li>
+								<li>基于面向对象设计模式构建日志与追踪服务，增强系统可观测性与可维护性。</li>
+								<li>优化关键 I/O 流程，将运行时间从 120 分钟缩短至 20 分钟，并编写使用文档与开展培训以支持工程团队。</li>
 							</ul>
 						</div>
 					</div>
@@ -104,14 +101,10 @@
 							<h2>新东方</h2>
 						</div>
 						<div class="card-right">
-							<h3>英语教师</h3>
+							<h3>托福阅读英语教师</h3>
 							<ul>
-								<li>教授英语语言课程</li>
-								<li>开发引人入胜的课程内容</li>
-								<li>营造积极的学习环境</li>
-								<li>支持不同学生群体</li>
-								<li>最佳讲师奖</li>
-								<li>学生满意度95%</li>
+								<li>负责托福阅读部分教学，系统讲解核心题型、文章结构与常见出题逻辑，帮助学生掌握高效应试策略。</li>
+								<li>教授信息定位、选项分析、阅读节奏控制等方法，并根据学生基础制定个性化学习路径与备考计划。</li>
 							</ul>
 						</div>
 					</div>
