--- a/work/index.html
+++ b/work/index.html
@@ -79,12 +79,9 @@
 						<div class="card-right">
 							<h3>Software Engineer</h3>
 							<ul>
-								<li>Comprehensive testing solutions for semiconductor industry</li>
-								<li>Creating automated test systems</li>
-								<li>Improving manufacturing efficiency</li>
-								<li>Software innovation for production</li>
-								<li>Reduced testing time by 30%</li>
-								<li>Developed key automation frameworks</li>
+								<li>Simplified application-level software infrastructure by removing redundant components and improving development efficiency across the test system codebase.</li>
+								<li>Developed a tracing and logging service for semiconductor instrumentation software using object-oriented design patterns to enhance observability and maintainability.</li>
+								<li>Optimized critical I/O operations, reducing execution time from 120 minutes to 20 minutes, and produced user documentation and training sessions for engineering teams.</li>
 							</ul>
 						</div>
 					</div>
@@ -104,14 +101,10 @@
 							<h2>New Oriental</h2>
 						</div>
 						<div class="card-right">
-							<h3>English Teacher</h3>
+							<h3>TOEFL Reading English Teacher</h3>
 							<ul>
-								<li>Teaching English language courses</li>
-								<li>Developing engaging curriculum</li>
-								<li>Fostering positive learning environment</li>
-								<li>Supporting diverse student groups</li>
-								<li>Top-rated instructor award</li>
-								<li>95% student satisfaction rate</li>
+								<li>Specialized in teaching the TOEFL Reading section, helping students master question types, passage structures, and exam strategies.</li>
+								<li>Coached students on critical reading, time management, and vocabulary-building methods, and provided personalized study plans that improved their TOEFL reading scores.</li>
 							</ul>
 						</div>
 					</div>
