Update contact style

--- a/index-zh.html
+++ b/index-zh.html
@@ -137,32 +137,52 @@
 				<div class="row">
 					<a href="https://www.linkedin.com/in/yancwang" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
-							<img src="assets/images/linkedin.jpg" alt="LinkedIn" class="contact-icon">
-							<h3><strong>领英</strong></h3>
+							<div class="icon-section">
+								<img src="assets/images/linkedin.jpg" alt="LinkedIn" class="contact-icon">
+							</div>
+							<div class="text-section">
+								<h3><strong>领英</strong></h3>
+							</div>
 						</section>
 					</a>
 					<a href="https://www.instagram.com/mrsuperchen24" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
-							<img src="assets/images/Instagram_logo_2022.png" alt="Instagram" class="contact-icon">
-							<h3><strong>Instagram</strong></h3>
+							<div class="icon-section">
+								<img src="assets/images/Instagram_logo_2022.png" alt="Instagram" class="contact-icon">
+							</div>
+							<div class="text-section">
+								<h3><strong>Instagram</strong></h3>
+							</div>
 						</section>
 					</a>
 					<a href="https://500px.com/p/mryanchen?view=photos" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
-							<img src="assets/images/500px.png" alt="500px" class="contact-icon">
-							<h3><strong>500px</strong></h3>
+							<div class="icon-section">
+								<img src="assets/images/500px.png" alt="500px" class="contact-icon">
+							</div>
+							<div class="text-section">
+								<h3><strong>500px</strong></h3>
+							</div>
 						</section>
 					</a>
 					<a href="https://500px.com.cn/mrchen0724" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
-							<img src="assets/images/Visual_China_Group_logo.png" alt="视觉中国" class="contact-icon">
-							<h3><strong>视觉中国</strong></h3>
+							<div class="icon-section">
+								<img src="assets/images/Visual_China_Group_logo.png" alt="视觉中国" class="contact-icon">
+							</div>
+							<div class="text-section">
+								<h3><strong>视觉中国</strong></h3>
+							</div>
 						</section>
 					</a>
 					<a href="https://www.skypixel.com/users/djiuser-tc1jf6up7wdi" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
-							<img src="assets/images/logo-share.png" alt="SkyPixel" class="contact-icon">
-							<h3><strong>SkyPixel</strong></h3>
+							<div class="icon-section">
+								<img src="assets/images/logo-share.png" alt="SkyPixel" class="contact-icon">
+							</div>
+							<div class="text-section">
+								<h3><strong>SkyPixel</strong></h3>
+							</div>
 						</section>
 					</a>
 				</div>
