Add more contact

--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
 							</div>
 						</section>
 					</a>
+					<a href="https://xhslink.com/m/1Bit5SxvHYH" target="_blank" rel="noopener noreferrer" class="contact-link">
+						<section class="contact-box">
+							<div class="icon-section">
+								<img src="assets/images/redbook.png" alt="rednote" class="contact-icon">
+							</div>
+							<div class="text-section">
+								<h3><strong>rednote</strong></h3>
+							</div>
+						</section>
+					</a>
 					<a href="https://www.instagram.com/mrsuperchen24" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
 							<div class="icon-section">
