Update mobile page

--- a/index-zh.html
+++ b/index-zh.html
@@ -53,21 +53,27 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
+						<a href="education/index-zh.html#northeastern" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/education/NU.png" alt="东北大学" width="200" height="200"></span>
+							<div class="box-content">
+								<h3>研究生<br><strong>东北大学</strong></h3>
+							</div>
+						</a>
+					</section>
+					<section class="box">
 						<a href="education/index-zh.html#wuhan" style="text-decoration: none; color: inherit; display: block;">
 							<span class="image"><img src="assets/images/education/Wuhan_University_Logo.png" alt="武汉大学" width="200" height="200"></span>
-							<h3>本科<br><strong>武汉大学</strong></h3>
+							<div class="box-content">
+								<h3>本科<br><strong>武汉大学</strong></h3>
+							</div>
 						</a>
 					</section>
 					<section class="box">
 						<a href="education/index-zh.html#sjtu" style="text-decoration: none; color: inherit; display: block;">
 							<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="上海交通大学" width="200" height="200"></span>
-							<h3>暑期学校<br><strong>上海交通大学</strong></h3>
-						</a>
-					</section>
-					<section class="box">
-						<a href="education/index-zh.html#northeastern" style="text-decoration: none; color: inherit; display: block;">
-							<span class="image"><img src="assets/images/education/NU.png" alt="东北大学" width="200" height="200"></span>
-							<h3>研究生<br><strong>东北大学</strong></h3>
+							<div class="box-content">
+								<h3>暑期学校<br><strong>上海交通大学</strong></h3>
+							</div>
 						</a>
 					</section>
 				</div>	
@@ -79,12 +85,13 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<a href="work/index-zh.html#neworiental" style="text-decoration: none; color: inherit; display: block;">
+						<a href="work/index-zh.html#amazon" style="text-decoration: none; color: inherit; display: block;">
 							<div class="logo-container">
-								<img src="assets/images/work/New_Oriental.png" alt="新东方">
+								<img src="assets/images/work/31epF-8N9LL.png" alt="亚马逊">
 							</div>
-							<h3><strong>新东方</strong></h3>
-							<p>英语教师</p>
+							<div class="box-content">
+								<h3>亚马逊<br><strong>软件开发工程师</strong></h3>
+							</div>
 						</a>
 					</section>
 					<section class="box">
@@ -92,17 +99,19 @@
 							<div class="logo-container">
 								<img src="assets/images/work/xcerra.png" alt="Xcerra">
 							</div>
-							<h3><strong>Xcerra</strong></h3>
-							<p>软件工程师</p>
+							<div class="box-content">
+								<h3>Xcerra<br><strong>软件工程师</strong></h3>
+							</div>
 						</a>
 					</section>
 					<section class="box">
-						<a href="work/index-zh.html#amazon" style="text-decoration: none; color: inherit; display: block;">
+						<a href="work/index-zh.html#neworiental" style="text-decoration: none; color: inherit; display: block;">
 							<div class="logo-container">
-								<img src="assets/images/work/31epF-8N9LL.png" alt="亚马逊">
+								<img src="assets/images/work/New_Oriental.png" alt="新东方">
 							</div>
-							<h3><strong>亚马逊</strong></h3>
-							<p>软件开发工程师</p>
+							<div class="box-content">
+								<h3>新东方<br><strong>英语教师</strong></h3>
+							</div>
 						</a>
 					</section>
 				</div>
@@ -116,16 +125,22 @@
 					<section class="box">
 						<a href="activity/photography-zh.html" style="text-decoration: none; color: inherit; display: block;">
 							<span class="image"><img src="assets/images/activity/camera_1423902.png" alt="摄影" width="100" height="100"></span>
-							<h3><strong>摄影</strong></h3>
+							<div class="box-content">
+								<h3><strong>摄影</strong></h3>
+							</div>
 						</a>
 					</section>
 					<section class="box">
 						<span class="image"><img src="assets/images/activity/map_7997627.png" alt="旅行" width="100" height="100"></span>
-						<h3><strong>旅行</strong></h3>
+						<div class="box-content">
+							<h3><strong>旅行</strong></h3>
+						</div>
 					</section>
 					<section class="box">
 						<span class="image"><img src="assets/images/activity/nabe_5746409.png" alt="美食" width="100" height="100"></span>
-						<h3><strong>美食</strong></h3>
+						<div class="box-content">
+							<h3><strong>美食</strong></h3>
+						</div>
 					</section>
 				</div>
 			</div>
@@ -250,6 +265,8 @@
 						behavior: 'smooth'
 					});
 				});
+				
+
 			});
 		</script>
 
