--- a/index.html
+++ b/index.html
@@ -53,21 +53,27 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
+						<a href="education/index.html#northeastern" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
+							<div class="box-content">
+								<h3>Graduate<br><strong>Northeastern University</strong></h3>
+							</div>
+						</a>
+					</section>
+					<section class="box">
 						<a href="education/index.html#wuhan" style="text-decoration: none; color: inherit; display: block;">
 							<span class="image"><img src="assets/images/education/Wuhan_University_Logo.png" alt="Wuhan University" width="200" height="200"></span>
-							<h3>Undergraduate<br><strong>Wuhan<br>University</strong></h3>
+							<div class="box-content">
+								<h3>Undergraduate<br><strong>Wuhan University</strong></h3>
+							</div>
 						</a>
 					</section>
 					<section class="box">
 						<a href="education/index.html#sjtu" style="text-decoration: none; color: inherit; display: block;">
 							<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University" width="200" height="200"></span>
-							<h3>Summer School<br><strong>Shanghai Jiaotong University</strong></h3>
-						</a>
-					</section>
-					<section class="box">
-						<a href="education/index.html#northeastern" style="text-decoration: none; color: inherit; display: block;">
-							<span class="image"><img src="assets/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
-							<h3>Graduate<br><strong>Northeastern University</strong></h3>
+							<div class="box-content">
+								<h3>Summer School<br><strong>Shanghai Jiaotong University</strong></h3>
+							</div>
 						</a>
 					</section>
 				</div>	
@@ -79,12 +85,13 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<a href="work/index.html#neworiental" style="text-decoration: none; color: inherit; display: block;">
+						<a href="work/index.html#amazon" style="text-decoration: none; color: inherit; display: block;">
 							<div class="logo-container">
-								<img src="assets/images/work/New_Oriental.png" alt="New Oriental">
+								<img src="assets/images/work/31epF-8N9LL.png" alt="Amazon">
 							</div>
-							<h3><strong>New Oriental</strong></h3>
-							<p>English Teacher</p>
+							<div class="box-content">
+								<h3>Amazon<br><strong>Software Development Engineer</strong></h3>
+							</div>
 						</a>
 					</section>
 					<section class="box">
@@ -92,17 +99,19 @@
 							<div class="logo-container">
 								<img src="assets/images/work/xcerra.png" alt="Xcerra">
 							</div>
-							<h3><strong>Xcerra</strong></h3>
-							<p>Software Engineer</p>
+							<div class="box-content">
+								<h3>Xcerra<br><strong>Software Engineer</strong></h3>
+							</div>
 						</a>
 					</section>
 					<section class="box">
-						<a href="work/index.html#amazon" style="text-decoration: none; color: inherit; display: block;">
+						<a href="work/index.html#neworiental" style="text-decoration: none; color: inherit; display: block;">
 							<div class="logo-container">
-								<img src="assets/images/work/31epF-8N9LL.png" alt="Amazon">
+								<img src="assets/images/work/New_Oriental.png" alt="New Oriental">
 							</div>
-							<h3><strong>Amazon</strong></h3>
-							<p>Software Development Engineer</p>
+							<div class="box-content">
+								<h3>New Oriental<br><strong>English Teacher</strong></h3>
+							</div>
 						</a>
 					</section>
 				</div>
@@ -116,16 +125,22 @@
 					<section class="box">
 						<a href="activity/photography.html" style="text-decoration: none; color: inherit; display: block;">
 							<span class="image"><img src="assets/images/activity/camera_1423902.png" alt="Photography" width="100" height="100"></span>
-							<h3><strong>Photography</strong></h3>
+							<div class="box-content">
+								<h3><strong>Photography</strong></h3>
+							</div>
 						</a>
 					</section>
 					<section class="box">
 						<span class="image"><img src="assets/images/activity/map_7997627.png" alt="Travel" width="100" height="100"></span>
-						<h3><strong>Travel</strong></h3>
+						<div class="box-content">
+							<h3><strong>Travel</strong></h3>
+						</div>
 					</section>
 					<section class="box">
 						<span class="image"><img src="assets/images/activity/nabe_5746409.png" alt="Food" width="100" height="100"></span>
-						<h3><strong>Food</strong></h3>
+						<div class="box-content">
+							<h3><strong>Food</strong></h3>
+						</div>
 					</section>
 				</div>
 			</div>
@@ -250,6 +265,8 @@
 						behavior: 'smooth'
 					});
 				});
+				
+
 			});
 		</script>
 
