Update the content

--- a/work/index-zh.html
+++ b/work/index-zh.html
@@ -52,12 +52,10 @@
 						<div class="card-right">
 							<h3>软件开发工程师</h3>
 							<ul>
-								<li>云基础设施和分布式系统</li>
-								<li>设计可扩展的解决方案</li>
-								<li>实现微服务架构</li>
-								<li>优化系统性能</li>
-								<li>领导关键基础设施项目</li>
-								<li>系统可靠性提升40%</li>
+								<li>负责大型分布式系统研发，重点关注 安全性、稳定性与高可用</li>
+								<li>设计并实现关键基础设施组件，确保系统 风险可控、可靠运行</li>
+								<li>通过模块化与分层架构强化 安全边界与故障隔离</li>
+								<li>构建日志、监控与告警能力，提升 系统可观测性与安全响应能力</li>
 							</ul>
 						</div>
 					</div>
