--- a/work/index.html
+++ b/work/index.html
@@ -52,12 +52,10 @@
 						<div class="card-right">
 							<h3>Software Development Engineer</h3>
 							<ul>
-								<li>Cloud infrastructure and distributed systems</li>
-								<li>Designing scalable solutions</li>
-								<li>Implementing microservices architecture</li>
-								<li>Optimizing system performance</li>
-								<li>Led critical infrastructure projects</li>
-								<li>Improved system reliability by 40%</li>
+								<li>Developed Large-scale distributed cloud systems with a focus on security, stability and high availability</li>
+								<li>Designed core infrastructure components to ensure reliable and risk-controlled operation</li>
+								<li>Strengthened security boundaries and fault isolation through modular, layered architecture</li>
+								<li>Improved observability and security response via logging, monitoring, and alerting</li>
 							</ul>
 						</div>
 					</div>
